--- a/client_FE/package.json
+++ b/client_FE/package.json
@@ -11,8 +11,10 @@
         "format": "prettier --write \"src/**/*.{js,jsx}\""
     },
     "dependencies": {
+        "flowbite-react": "^0.10.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.3.0",
         "react-router-dom": "^6.26.2"
     },
     "devDependencies": {
