--- a/client_FE/package.json
+++ b/client_FE/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "start": "vite",
         "build": "vite build",
         "lint": "eslint .",
         "preview": "vite preview",
@@ -12,6 +13,7 @@
     },
     "dependencies": {
         "flowbite-react": "^0.10.1",
+        "nodemon": "^3.1.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
