--- a/client_FE/package.json
+++ b/client_FE/package.json
@@ -12,6 +12,9 @@
         "format": "prettier --write \"src/**/*.{js,jsx}\""
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.56.2",
+        "axios": "^1.7.7",
+        "dotenv": "^16.4.5",
         "flowbite-react": "^0.10.1",
         "nodemon": "^3.1.5",
         "prop-types": "^15.8.1",
@@ -26,8 +29,8 @@
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
         "autoprefixer": "^10.4.20",
-        "eslint": "^9.9.0",
-        "eslint-plugin-react": "^7.35.0",
+        "eslint": "^9.10.0",
+        "eslint-plugin-react": "^7.36.1",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
         "globals": "^15.9.0",
