--- a/client_FE/package.json
+++ b/client_FE/package.json
@@ -16,6 +16,7 @@
         "@tanstack/react-query": "^5.56.2",
         "axios": "^1.7.7",
         "dotenv": "^16.4.5",
+        "firebase": "^10.13.2",
         "flowbite-react": "^0.10.1",
         "nodemon": "^3.1.5",
         "prop-types": "^15.8.1",
