completed profile page UI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "editor.formatOnSave": true,
-    "cSpell.autoFormatConfigFile": true,
-    "autoprefixer.formatOnSave": true,
-    "notebook.formatOnSave.enabled": true
+  "editor.formatOnSave": true,
+  "cSpell.autoFormatConfigFile": true,
+  "autoprefixer.formatOnSave": true,
+  "notebook.formatOnSave.enabled": true,
+  "cSpell.words": ["defaultvalue"]
 }
