--- a/client_FE/package.json
+++ b/client_FE/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^16.4.5",
         "firebase": "^10.13.2",
         "flowbite-react": "^0.10.1",
+        "js-cookie": "^3.0.5",
         "nodemon": "^3.1.5",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
