--- a/client_FE/package.json
+++ b/client_FE/package.json
@@ -12,6 +12,7 @@
         "format": "prettier --write \"src/**/*.{js,jsx}\""
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.5",
         "@reduxjs/toolkit": "^2.2.7",
         "@tanstack/react-query": "^5.56.2",
         "axios": "^1.7.7",
