--- a/client_FE/package.json
+++ b/client_FE/package.json
@@ -20,6 +20,7 @@
         "firebase": "^10.13.2",
         "flowbite-react": "^0.10.1",
         "js-cookie": "^3.0.5",
+        "moment": "^2.30.1",
         "nodemon": "^3.1.5",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
